feat: favourites as main subject of page
